--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,21 +15,13 @@
     "module": "ESNext", // 当前代码语法
     "outDir": "./lib",
     "declarationDir": "./lib/types",
-    "types": [
-      "node"
-    ],
     "allowUnreachableCode": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "removeComments": false,
     "noImplicitAny": false,
     "forceConsistentCasingInFileNames": true,
-    "lib": [
-      "es6",
-      "dom"
-    ]
+    "lib": ["es6", "dom"]
   },
-  "include": [
-    "packages"
-  ]
+  "include": ["packages"]
 }
