--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "format": "prettier --write packages/**/*.{ts,js}",
     "tsc": "tsc --watch",
-    "build": "set NODE_ENV=production&& rollup -c rollup.config.js"
+    "build": "set NODE_ENV=production&& rollup -c rollup.config.js",
+    "test": "jest"
   },
   "author": "diaosiwei",
   "homepage": "https://github.com/galaxy-softwares/elvin-js",
@@ -26,14 +27,18 @@
     "@commitlint/config-conventional": "^12.1.4",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@types/jest": "^27.4.1",
     "@types/node": "^15.3.1",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "error-stack-parser": "^2.0.7",
+    "esbuild": "^0.14.25",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^4.3.8",
+    "jest": "^27.5.1",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.0",
     "rollup": "^2.48.0",
