--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "format": "prettier --write packages/**/*.{ts,js}",
     "tsc": "tsc --watch",
-    "build": "set NODE_ENV=production&& rollup -c rollup.config.js",
+    "build": "tsc -p tsconfig.build.json && rollup -c rollup.config.js",
     "test": "jest",
     "prepare": "husky install"
   },
